# tap

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-entrypoint.sh  spec.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml
connectors/: asana.yaml  clickup.yaml  cloudflare.yaml  discord.yaml  github.yaml  gitlab.yaml  google.yaml  hubspot.yaml  jira.yaml  jsonplaceholder.yaml  linear.yaml  mailchimp.yaml  notion.yaml  pagerduty.yaml  rest.yaml  salesforce.yaml  sendgrid.yaml  servicenow.yaml  shopify.yaml  slack.yaml  stripe.yaml  x.yaml  zendesk.yaml
demo/imperial-fleet/: README.md  connector.yaml  openapi.yaml  server.mjs
docs/: ROADMAP.md  architecture.md  managed-agents.md
docs/proposals/: aggregate-snapshot.md  search-providers.md  vfs-core-split.md  writable-backend.md  x-connector.md
macos/: build.sh  project.yml
macos/TapFS/: Info.plist  TapFS.entitlements
macos/TapFS.xcodeproj/: project.pbxproj
plugins/openclaw/: openclaw.plugin.json  package.json
plugins/shared/: SKILL.md  tapfs-launcher
scripts/: env-check.py  env-create.py  test-install-agent.py
site/: index.html  install.sh
site/privacy/: index.html
site/tos/: index.html
src/: config.rs  credentials.rs  ipc.rs  lib.rs  main.rs
src/cache/: disk.rs  mod.rs  store.rs
src/cli/: approve.rs  auth.rs  inspect.rs  log.rs  mod.rs  mount.rs  pkce.rs  registry.rs  search.rs  service.rs  setup.rs  status.rs  unmount.rs  versions.rs
src/connector/: atlassian_auth.rs  builtin.rs  confluence.rs  factory.rs  google.rs  jira.rs  mod.rs  registry.rs  rest.rs  retry.rs  salesforce.rs  spec.rs  traits.rs
src/draft/: store.rs
src/ffi/: bridge.rs
src/fs/: entry.rs  inode.rs  mod.rs  ops.rs  tapfs.rs
src/governance/: audit.rs  interceptor.rs  mod.rs
src/nfs/: server.rs
src/path/: parser.rs
src/search/: factory.rs  fusion.rs  governance.rs  mod.rs  registry.rs  spec.rs  traits.rs
src/version/: store.rs
tests/: smoke_live.rs
(+36 files in other folders)
