[package]
name = "tapfs"
version = "0.1.0"
edition = "2021"
description = "FUSE filesystem that mounts enterprise REST APIs as agent-readable files"
authors = ["Sergey Generalov"]
license = "Apache-2.0"
repository = "https://github.com/tapfs/tap"
homepage = "https://tapfs.dev"
keywords = ["fuse", "filesystem", "api", "agent", "enterprise"]
categories = ["development-tools", "filesystem"]

[lib]
name = "tapfs"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "tap"
path = "src/main.rs"

[features]
default = ["fuse", "nfs"]
fuse = ["fuser"]
nfs = ["nfsserve"]

[dependencies]
fuser = { version = "0.14", optional = true }
nfsserve = { version = "0.11", optional = true }
clap = { version = "=4.4.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
async-trait = "0.1"
anyhow = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
oauth2 = "4"
libc = "0.2"
dirs = "5"
bytes = "1"
siphasher = "1"

[dev-dependencies]
wiremock = "=0.6.2"
tempfile = "3"
